# SimplexGraphics

./: CMakeLists.txt
include/SimplexGraphics/: RenderComponent.h  Renderer.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Renderer.cpp
